tests/js_error/source_locations/expression/yield_star/throw_get_method_throws.js
var iterable = {
  [Symbol.iterator]() {
    return {
      next() {
        return { value: 1, done: false };
      },
      get throw() {
        throw new Error('get throw');
      }
    };
  }
}

function *generator() {
  yield* iterable;
}

let iter = generator();
iter.next();
iter.throw();